--- a/markup/estate/index.html
+++ b/markup/estate/index.html
@@ -67,6 +67,14 @@
             <link rel="stylesheet" href="/components/catalog.element/style.css">
             <script src="/components/catalog.element/script.js"></script>
             <div itemscope itemtype="http://schema.org/Residence" class="b-estate">
+              <h1>Двухуровневая квартира общ. пл. 1040 кв.м., свободная планировка</h1>
+              <div class="b-estate__bar">
+                <!-- start /components/favorite/-->
+                <link rel="stylesheet" href="/components/favorite/style.css">
+                <script src="/components/favorite/script.js"></script><a href="/components/favorite/send.json?id=456" title="Добавить в избранное" class="b-favorite-icon"></a><a href="/components/favorite/send.json?id=456" title="Убрать из избранного" class="b-favorite-icon i-on"></a>
+                <!-- end /components/favorite/--><a href="#" target="_blank" class="b-address-link"><span class="b-address-link__text">Россия, Москва, Молочный переулок, дом 3</span></a>
+              </div>
+              <hr>
               <!-- start /components/catalog.gallery/-->
               <link href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.3/fotorama.css" rel="stylesheet">
               <link rel="stylesheet" href="/components/catalog.gallery/style.css">
@@ -102,131 +110,175 @@
               </div>
               <!-- end /components/catalog.gallery/-->
               <hr>
-              <div id="estateAbout" class="b-estate-about">
-                <h1>Квартиры в I'M квартал</h1>
-                <div class="b-row b-estate__props">
-                  <div class="b-col-sm-4"><img src="/upload/estate-prop/1.png" width="100" height="100" alt="">
-                    <h5 itemprop="amenityFeature">Собственный сад в голландском стиле Hyco Verhaagen.</h5>
-                  </div>
-                  <div class="b-col-sm-4"><img src="/upload/estate-prop/2.png" width="100" height="100" alt="">
-                    <h5 itemprop="amenityFeature">Эксклюзивный дизайн AEDAS. </h5>
-                  </div>
-                  <div class="b-col-sm-4"><img src="/upload/estate-prop/3.png" width="100" height="100" alt="">
-                    <h5 itemprop="amenityFeature">Clubhouse — уникальный сервис для проведения деловых встреч.</h5>
-                  </div>
+              <button id="toContactForm" class="i-theme-b">Оставить заявку</button>
+              <hr>
+              <div class="description">
+                <p>В небольшой клубном доме напротив Зачатьевского монастыря в продажу предлагается просторная двухуровневая квартира на 2-м и 3-м этажах общей площадью 1040 кв.м.</p>
+                <p>Из окон открываются чудесные виды на Храм и тихие переулки Остоженки. </p>Квартиру можно разделить как по вертикали, так и по горизонтали. 
+                Минимальная площадь покупки - 260 кв.м. Есть возможность покупки как полностью 2 и 3 этажа, так и отдельно. Площади, соответственно по 520 м (этаж).
+                Также, есть возможность приобрести машиноместа в подземном паркинге.
+              </div>
+              <hr>
+              <table class="b-data-table">
+                <colgroup>
+                  <col class="name">
+                  <col class="value">
+                </colgroup>
+                <thead>
+                  <tr>
+                    <th>Параметр</th>
+                    <th>Значение</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th>Район</th>
+                    <td>Остоженка</td>
+                  </tr>
+                  <tr>
+                    <th>Метро</th>
+                    <td>Кропоткинская, Парк Культуры</td>
+                  </tr>
+                </tbody>
+              </table>
+              <hr>
+              <div class="b-estate__map">
+                <h2>Схема проезда</h2>
+                <div class="i-border">
+                  <script type="text/javascript" charset="utf-8" src="//api-maps.yandex.ru/services/constructor/1.0/js/?sid=Wa3Q9dYruHRftSb8fWLAeirmyIIPq9wD&amp;amp;width=100%&amp;amp;height=450"></script>
                 </div>
-                <hr>
-                <div itemprop="review" class="description">
-                  <h2>Квартиры и апартаменты в ЖК I’M</h2>
-                  <p>Buro 77 представляет квартиры и апартаменты, а также коммерческие помещения в жилом комплексе I’M.</p>
-                  <p>I’M — элитный жилой квартал, расположен на Шлюзовой набережной, с видом на Московский международный Дом Музыки, Swissotel Красные Холмы и набережную Москвы-реки. Квартал состоит из двух элегантных 6-7-этажных строений.</p>
-                  <p>В жилом квартале предусмотрена просторная внутренняя территория площадью 1 гектар, где будет создан роскошный сад с зонами для активного и спокойного отдыха.</p>
-                  <p>Впервые в Москве жителям жилого квартала будет предложен уникальный сервис — Clubhouse, который будет включать в себя библиотеку, домашний кинотеатр, залы для проведения праздников, мероприятий и деловых встреч.</p>
-                  <p>Контроль доступа, система видеонаблюдения, круглосуточная консьерж-служба, охрана периметра комплекса, система видеодомофонов в квартирах и апартаментах.</p>
+              </div>
+              <hr>
+              <table class="b-table">
+                <thead>
+                  <tr>
+                    <th></th>
+                    <th>Лот</th>
+                    <th>Этаж</th>
+                    <th>Площадь</th>
+                    <th>Цена</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr onclick="window.location.href='/estate/'">
+                    <td><img src="/upload/estates/1-small.jpg" width="50" height="50" alt=""></td>
+                    <td>f2064</td>
+                    <td>19</td>
+                    <td>234 м<sup>2</sup></td>
+                    <td>5 000 000 руб.</td>
+                  </tr>
+                  <tr onclick="window.location.href='/estate/'">
+                    <td><img src="/upload/estates/1-small.jpg" width="50" height="50" alt=""></td>
+                    <td>f2064</td>
+                    <td>19</td>
+                    <td>234 м<sup>2</sup></td>
+                    <td>5 000 000 руб.</td>
+                  </tr>
+                  <tr onclick="window.location.href='/estate/'">
+                    <td><img src="/upload/estates/1-small.jpg" width="50" height="50" alt=""></td>
+                    <td>f2064</td>
+                    <td>19</td>
+                    <td>234 м<sup>2</sup></td>
+                    <td>5 000 000 руб.</td>
+                  </tr>
+                  <tr onclick="window.location.href='/estate/'">
+                    <td><img src="/upload/estates/1-small.jpg" width="50" height="50" alt=""></td>
+                    <td>f2064</td>
+                    <td>19</td>
+                    <td>234 м<sup>2</sup></td>
+                    <td>5 000 000 руб.</td>
+                  </tr>
+                  <tr onclick="window.location.href='/estate/'">
+                    <td><img src="/upload/estates/1-small.jpg" width="50" height="50" alt=""></td>
+                    <td>f2064</td>
+                    <td>19</td>
+                    <td>234452 м<sup>2</sup></td>
+                    <td>5 000 000 руб.</td>
+                  </tr>
+                  <tr onclick="window.location.href='/estate/'">
+                    <td><img src="/upload/estates/1-small.jpg" width="50" height="50" alt=""></td>
+                    <td>f2064</td>
+                    <td>19</td>
+                    <td>234 м<sup>2</sup></td>
+                    <td>5 000 000 руб.</td>
+                  </tr>
+                  <tr onclick="window.location.href='/estate/'">
+                    <td><img src="/upload/estates/1-small.jpg" width="50" height="50" alt=""></td>
+                    <td>f2064</td>
+                    <td>195</td>
+                    <td>234 м<sup>2</sup></td>
+                    <td>5 000 000 руб.</td>
+                  </tr>
+                  <tr onclick="window.location.href='/estate/'">
+                    <td><img src="/upload/estates/1-small.jpg" width="50" height="50" alt=""></td>
+                    <td>f2064</td>
+                    <td>19</td>
+                    <td>234 м<sup>2</sup></td>
+                    <td>5 000 руб.</td>
+                  </tr>
+                  <tr onclick="window.location.href='/estate/'">
+                    <td><img src="/upload/estates/1-small.jpg" width="50" height="50" alt=""></td>
+                    <td>f2064</td>
+                    <td>19</td>
+                    <td>234 м<sup>2</sup></td>
+                    <td>5 000 000 000 руб.</td>
+                  </tr>
+                  <tr onclick="window.location.href='/estate/'">
+                    <td><img src="/upload/estates/1-small.jpg" width="50" height="50" alt=""></td>
+                    <td>f2064</td>
+                    <td>19</td>
+                    <td>234 м<sup>2</sup></td>
+                    <td>5 000 000 руб.</td>
+                  </tr>
+                  <tr onclick="window.location.href='/estate/'">
+                    <td><img src="/upload/estates/1-small.jpg" width="50" height="50" alt=""></td>
+                    <td>f2064</td>
+                    <td>19</td>
+                    <td>234 м<sup>2</sup></td>
+                    <td>5 000 000 руб.</td>
+                  </tr>
+                </tbody>
+              </table>
+              <hr><a href="presentation.pdf" class="b-download-panel"><span class="b-pdf-file"><span class="b-pdf-file__name">Презентация объекта<br><span class="small">PDF 32 Мб</span></span></span></a>
+              <hr>
+              <div class="b-back-block">
+                <h2><a href="">I'M квартал</a></h2>
+                <div class="b-back-block__image"><a href=""><img src="/upload/estates/im.jpg" width="200" height="200" alt=""></a></div>
+                <div class="b-back-block__table">
+                  <table class="b-data-table">
+                    <colgroup>
+                      <col class="name">
+                      <col class="value">
+                    </colgroup>
+                    <tbody>
+                      <tr>
+                        <th>Год постройки (срок сдачи ГК, ввода в эксплуатацию)</th>
+                        <td>2018</td>
+                      </tr>
+                      <tr>
+                        <th>Метро</th>
+                        <td>Павелецкая</td>
+                      </tr>
+                      <tr>
+                        <th>Район</th>
+                        <td>Замоскворечье</td>
+                      </tr>
+                      <tr>
+                        <th>Количество квартир</th>
+                        <td>388</td>
+                      </tr>
+                      <tr>
+                        <th>Этажей</th>
+                        <td>6-7</td>
+                      </tr>
+                      <tr>
+                        <th>Паркинг</th>
+                        <td>Подземный</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                  <hr><a href="" class="b-button i-theme-c">ПОДРОБНЕЕ ОБ I’M квартал</a>
                 </div>
-              </div>
-              <hr>
-              <div id="estateData" class="b-estate-data">
-                <h2>Данные жилого комплекса I’M квартал</h2>
-                <table class="b-data-table">
-                  <colgroup>
-                    <col class="name">
-                    <col class="value">
-                  </colgroup>
-                  <tbody>
-                    <tr>
-                      <th>Год постройки (срок сдачи ГК, ввода в эксплуатацию)</th>
-                      <td>2018</td>
-                    </tr>
-                    <tr>
-                      <th>Инфраструктура района</th>
-                      <td>Инфраструктура квартала полностью соответствует классу объект и включает: медицинский центр, спа-салон, частный детский сад на 45 мест, кафе и другие сервисы.</td>
-                    </tr>
-                    <tr>
-                      <th>Адрес</th>
-                      <td itemprop="address">Улица, дом</td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-              <hr>
-              <div id="estateProgress">
-                <h2>Текущий этап строительства I’M квартал</h2>
-                <div class="b-estate-progressbar">
-                  <div class="b-estate-progressbar__percent">70 %</div>
-                </div>
-                <div class="b-row b-estate__props"><a href="" class="b-col-sm-4"><img src="/upload/estate-prop/1.png" width="100" height="100" alt="">
-                    <h5>Онлайн камера строительства ЖК i’M квартал.</h5></a><a href="" class="b-col-sm-4"><img src="/upload/estate-prop/2.png" width="100" height="100" alt="">
-                    <h5>Проектная декларация I'M.</h5></a></div>
-              </div>
-              <hr>
-              <div id="estatePlan" class="b-estate__plan">
-                <h2>Планировки i’M квартал</h2>
-                <figure>
-                  <!-- start /components/catalog.gallery/-->
-                  <div data-width="100%" data-ratio="3/2" data-loop="true" data-allowfullscreen="true" data-navposition="top" data-nav="thumbs" class="fotorama"><img src="/upload/estate-plan.jpg" alt="" itemprop="photo"><img src="/upload/estate-plan.jpg" alt="" itemprop="photo"><img src="/upload/estate-plan.jpg" alt="" itemprop="photo"><img src="/upload/estate-plan.jpg" alt="" itemprop="photo"><img src="/upload/estate-plan.jpg" alt="" itemprop="photo"><img src="/upload/estate-plan.jpg" alt="" itemprop="photo"><img src="/upload/estate-plan.jpg" alt="" itemprop="photo"><img src="/upload/estate-plan.jpg" alt="" itemprop="photo"><img src="/upload/estate-plan.jpg" alt="" itemprop="photo">
-                  </div>
-                  <!-- end /components/catalog.gallery/-->
-                </figure>
-              </div>
-              <hr>
-              <div id="estatePrice" class="b-estate__price">
-                <h2>Цены I'm квартал на Садовом</h2>
-                <table class="b-table">
-                  <thead>
-                    <tr>
-                      <th></th>
-                      <th>Лот</th>
-                      <th>Этаж</th>
-                      <th>Площадь</th>
-                      <th>Цена</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr onclick="window.location.href='/objects/i-m-kvartal-na-sadovom/'">
-                      <td><img src="https://buro77.ruhttps://buro77.ru/upload/iblock/f8e/f8efcb2d274546ad4ff4d2bc79055b5a.jpg" width="50" height="50"></td>
-                      <td>S148</td>
-                      <td>1</td>
-                      <td>коммерческая 61,3 м²</td>
-                      <td></td>
-                    </tr>
-                    <tr onclick="window.location.href='/objects/i-m-SC149/'">
-                      <td><img src="https://buro77.ruhttps://buro77.ru/upload/iblock/f8e/f8efcb2d274546ad4ff4d2bc79055b5a.jpg" width="50" height="50"></td>
-                      <td>S149</td>
-                      <td>1</td>
-                      <td>81,1 м²</td>
-                      <td></td>
-                    </tr>
-                    <tr onclick="window.location.href='/objects/i-m-SC150/'">
-                      <td><img src="https://buro77.ruhttps://buro77.ru/upload/iblock/f8e/f8efcb2d274546ad4ff4d2bc79055b5a.jpg" width="50" height="50"></td>
-                      <td>S150</td>
-                      <td>1</td>
-                      <td>88,8 м²</td>
-                      <td></td>
-                    </tr>
-                    <tr onclick="window.location.href='/objects/i-m-SC151/'">
-                      <td><img src="https://buro77.ru/upload/iblock/f8e/f8efcb2d274546ad4ff4d2bc79055b5a.jpg" width="50" height="50"></td>
-                      <td>S151</td>
-                      <td>1</td>
-                      <td>130,2 м²</td>
-                      <td></td>
-                    </tr>
-                    <tr onclick="window.location.href='/objects/i-m-SC152/'">
-                      <td><img src="https://buro77.ru/upload/iblock/f8e/f8efcb2d274546ad4ff4d2bc79055b5a.jpg" width="50" height="50"></td>
-                      <td>S152</td>
-                      <td>1</td>
-                      <td>191,3 м²</td>
-                      <td></td>
-                    </tr>
-                    <tr onclick="window.location.href='/objects/i-m-kvartal-na-sadovom-SF880/'">
-                      <td><img src="https://buro77.ru/upload/iblock/f8e/f8efcb2d274546ad4ff4d2bc79055b5a.jpg" width="50" height="50"></td>
-                      <td>SF880</td>
-                      <td>6</td>
-                      <td>137,91 м²</td>
-                      <td>64 701 166 ₽</td>
-                    </tr>
-                  </tbody>
-                </table>
               </div>
             </div>
             <!-- end /components/catalog.element/-->
