--- a/dest/estate/index.html
+++ b/dest/estate/index.html
@@ -58,9 +58,11 @@
           <!-- end /components/catalog.list.small/-->
         </div>
         <div class="b-block-b i-reverse">
-          <header class="b-header"><a href="" class="b-estate-logo"><img src="/upload/estate-logo/1.png" width="55" height="42" alt=""></a>
-            <div class="b-top-menu"><a href="#estateAbout">I'M квартал</a><a href="#estateData">данные проекта</a><a href="#estateProgress">этап строительства</a><a href="#estatePlan">планировка</a><a href="#estatePrice">цены</a><a href="#estateHypothec">ипотека</a></div>
-            <div class="b-phone">+7 499 999 34 45</div>
+          <header class="b-header">
+            <div class="b-header__fixed"><a href="" class="b-estate-logo"><img src="/upload/estate-logo/1.png" width="55" height="42" alt=""></a>
+              <div class="b-top-menu"><a href="#estateAbout">I'M квартал</a><a href="#estateData">данные проекта</a><a href="#estateProgress">этап строительства</a><a href="#estatePlan">планировка</a><a href="#estatePrice">цены</a><a href="#estateHypothec">ипотека</a></div>
+              <div class="b-phone">+7 499 999 34 45</div>
+            </div>
           </header>
           <div class="b-content">
             <!-- start /components/catalog.element/-->
